# app-capturix

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml  release.yml
build_deb/: linsnipper_0.2.0_all.deb
build_deb/linsnipper_0.2.0_all/DEBIAN/: control
scripts/: build_deb.py  investigate_window_capture.py  release.py  setup_gnome_shortcut.sh  setup_shortcut.sh
src/linsnipper/: __main__.py  app.py  cli.py  config.py  errors.py  logging_config.py
src/linsnipper/core/: __init__.py  capture_service.py  interfaces.py  models.py  single_instance.py  undo.py
src/linsnipper/infra/: __init__.py  platform.py  qt_capture_backend.py
src/linsnipper/ui/: __init__.py  drawing_canvas.py  editor_window.py  snip_overlay.py  tray.py
tests/: test_capture_service.py  test_drawing_canvas.py  test_logging_config.py
