[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "linsnipper"
version = "0.2.0"
description = "Screenshot/snipping tool for Linux inspired by Windows 11 Snipping Tool"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.5"]

[project.scripts]
linsnipper = "linsnipper.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
